tests/parser/return-statement-expression-error.stderr
error: expected expression
 --> $DIR/return-statement-expression-error.lox:1:17
  |
1 | fn f() { return /; }
  |                 ^
